[tool.poetry]
name = "stat"
version = "0.1.0"
description = ""
authors = ["WyattBlue <wyattblue@auto-editor.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.12.0"
pandas = "^1.5.3"
openpyxl = "^3.0.10"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
